--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ace-builds": "^1.4.12",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-ace": "^9.1.3",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-p5": "^1.3.6",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "remark-parse": "^8.0.3",
+    "remark-react": "^7.0.1",
+    "styled-components": "^5.2.0",
+    "unified": "^9.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
