--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-p5": "^1.3.6",
     "react-scripts": "3.4.3",
+    "react-useanimations": "^2.0.5",
     "remark-parse": "^8.0.3",
     "remark-react": "^7.0.1",
     "styled-components": "^5.2.0",
