--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-useanimations": "^2.0.5",
     "remark-parse": "^8.0.3",
     "remark-react": "^7.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.3.0",
     "styled-components": "^5.2.0",
     "unified": "^9.2.0"
   },
