--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.12",
     "bootstrap": "^4.5.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-ace": "^9.1.3",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-p5": "^1.3.6",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "react-thunk": "^1.0.0",
     "react-useanimations": "^2.0.5",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "remark-parse": "^8.0.3",
     "remark-react": "^7.0.1",
     "semantic-ui-css": "^2.4.1",
